[tool.poetry]
name = "NbsConvertor"
version = "0.1.0"
description = "A python program to convert Minecraft Note Block Music (.nbs) file to JSON"
authors = ["student_2333 <lgc2333@126.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pynbs = "^1.1.0"
ujson = "^5.4.0"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
