[tool.poetry]
name = "nbstransformer"
version = "0.1.0"
description = "Transform old nbs files to new format"
authors = ["student_2333 <lgc2333@126.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pynbs = "^1.1.0"
pyinstaller = "^5.3"
pathlib = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
